--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: 高其群群
+description: 温柔 、 美丽 、大方的小仙女
 url: https://vszhub.github.io
 avatar: /avatar.jpeg
 paginate: 5
